--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="/images/logo.svg" rel="icon" type="image/svg+xml" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>AI Salesman</title>
+    <title>Legal AI</title>
   </head>
   <body>
     <div class="h-full w-full" id="root"></div>
